--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "firebase": "^10.11.1"
+    "chart.js": "^4.4.3",
+    "firebase": "^10.11.1",
+    "react-chartjs-2": "^5.2.0"
   }
 }
