--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "chart.js": "^4.4.3",
     "firebase": "^10.11.1",
-    "react-chartjs-2": "^5.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-router-dom": "^6.23.1"
   }
 }
