--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "firebase": "^10.11.1",
     "react-chartjs-2": "^5.2.0",
     "react-router-dom": "^6.23.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.2"
   }
 }
