--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "devDependencies": {
-    "vite": "^2.7.1"
+    "prettier": "^3.3.2"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "firebase": "^10.11.1",
     "react-chartjs-2": "^5.2.0",
     "react-router-dom": "^6.23.1"
-  },
-  "devDependencies": {
-    "prettier": "^3.3.2"
   }
 }
