--- a/Mori/package.json
+++ b/Mori/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-tailwindcss-datepicker": "^1.6.6",
-    "react-use": "^17.5.0"
+    "react-use": "^17.5.0",
+    "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
