--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chart.js": "^4.4.3",
     "firebase": "^10.11.1",
     "react-chartjs-2": "^5.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "universal-cookie": "^7.1.4"
   }
 }
