--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "daisyui": "^4.12.2",
     "firebase": "^10.11.1",
     "react-chartjs-2": "^5.2.0",
     "react-router-dom": "^6.23.1",
